# dwib

./: .hgtags  Makefile.in  Version  configure  configure.in  dwib-config1.in  dwib.c  dwib.h  dwib1.pc.in  dwib_int.h  dwib_lib.c  example.c  example.xml  makefile.emx  makefile.vac  makefile.vc  readme.txt  resources.h  winmain.c
android/: CMakeLists.txt
gtk/: Bitmap.xpm  Box.xpm  Button.xpm  Calendar.xpm  Color.h  Color.xpm  Combobox.xpm  Container.xpm  Entryfield.xpm  Font.h  Font.xpm  HTML.xpm  Interface Builder.xpm  Listbox.xpm  Locale.h  Locale.xpm  MLE.xpm  Menu.xpm  Notebook.xpm  NotebookPage.xpm  Padding.xpm  Placehold.xpm  Ranged.xpm  Refresh.h  Refresh.xpm  Render.xpm  Text.xpm  Tree.xpm  Window.xpm  dwib.gresource.xml  org.dbsoft.dwindows.dwib.desktop.in  resources.c  resources.sh
install/: dwib-x64.nsi  dwib-x86.nsi  dwib.cfg  dwib.wis
install/scripts/: finished.cmd  license.txt  page1.cmd  page2.cmd  page3.cmd  page4.cmd  readme.cmd  reboot.cmd
mac/: Info.plist  Interface Builder.icns  finishup.sh  installer.sh
os2/: dwib.rc  dwib_lib.def  example.def
template/: %APP%.c  %APP%.h  Makefile.in  configure.in  makefile.emx  makefile.vac  makefile.vc  resources.h
template/gtk/: resources.c
template/os2/: %APP%.rc
template/win/: %APP%.def  %APP%.exe.x64.manifest  %APP%.exe.x86.manifest  %APP%.rc
win/: dwib.def  dwib.dll.x64.manifest  dwib.dll.x86.manifest  dwib.exe.x64.manifest  dwib.exe.x86.manifest  dwib.rc  example.exe.x64.manifest  example.exe.x86.manifest
