AC_INIT(dwib.c)
AC_CONFIG_HEADER(config.h)

TARGET="dwib"

INCLUDES="-I."

AC_PROG_CC

AC_CHECK_PROG(MAKE, gmake, gmake)
if test x"$MAKE" = x; then
  AC_CHECK_PROG(MAKE, make, make)
fi
if test -d .hg; then 
   AC_CHECK_PROG(MERCURIAL, hg, hg)
fi
if test x"$MERCURIAL" = x; then
   MERCURIAL=0
else
   MERCURIAL="\` $MERCURIAL log -r . --template={rev} \`"
fi

AC_PROG_INSTALL

AC_SUBST(MAKE)

dnl Checks for system
AC_CANONICAL_SYSTEM

dnl ---------------------- check for '--with-arch' switch -----------------
AC_ARG_WITH(arch,
   [  --with-arch             specify architecture: one of all, 32bit, 64bit, intel, ppc, ppc64, x86_64, i386],
   [with_arch=$withval],
   [with_arch=no],
)

AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/stat.h)

PLATCCFLAGS="-g -O2 -fPIC -Wall"

LIBS=`dwindows-config --libs`
CFLAGS=`dwindows-config --cflags`

AC_CHECK_LIB(dwindows, dw_main,LIBS="$LIBS",AC_MSG_ERROR(Dynamic Windows library not found. Interface Builder cannot build without it.))

LIBSUFFIX=a
LIBPREFIX=lib

PLATFORM=`uname -s`

if test x"$PLATFORM" = x"Darwin"; then
  LIBXML2_CFLAGS="-I/usr/include/libxml2"
  LIBXML2_LIBS="-L/usr/lib -lxml2"
  SHAREDFLAG="-dynamiclib -flat_namespace -undefined suppress"
  SOSUFFIX=dylib
else
  SHAREDFLAG=-shared
  SOSUFFIX=so
  LIBXML2_LIBS=`pkg-config libxml-2.0 --libs`
  LIBXML2_CFLAGS=`pkg-config libxml-2.0 --cflags`
fi

LIBS="$LIBXML2_LIBS $LIBS"
CFLAGS="$LIBXML2_CFLAGS $CFLAGS"

SYSCONF_LINK_TARGET_SHARED="lib$TARGET.$SOSUFFIX.\$(VER_MAJ).\$(VER_MIN)"
SYSCONF_LINK_TARGET_STATIC="lib$TARGET.a"

AC_CHECK_LIB(xml2, xmlNewDoc,LIBS="$LIBS",AC_MSG_ERROR(XML2 library not found. Interface Builder cannot build without it.))

case "$target" in
   *apple-darwin*)
      case "$with_arch" in
         no)
            ARCH=""
            ;;
         all)
            ARCH="-arch ppc -arch ppc64 -arch x86_64 -arch i386"
            ;;
         32bit)
            ARCH="-arch ppc -arch i386"
            ;;
         64bit)
            ARCH="-arch ppc64 -arch x86_64"
            ;;
         intel)
            ARCH="-arch i386 -arch x86_64"
            ;;
         *)
            ARCH="-arch $with_arch"
            ;;
      esac
   ;;
   *)
   ;;
esac

RM="rm -f"
LN="ln -s"
CP="cp"
MV="mv"
MKDIR="mkdir"

AC_SUBST(SYSCONF_LINK_TARGET_SHARED)
AC_SUBST(SYSCONF_LINK_TARGET_STATIC)

AC_SUBST(DWIB_MAJOR_VERSION)
AC_SUBST(DWIB_MINOR_VERSION)
AC_SUBST(DWIB_SUB_VERSION)
AC_SUBST(PLATCCFLAGS)
AC_SUBST(INCLUDES)
AC_SUBST(RM)
AC_SUBST(LN)
AC_SUBST(CP)
AC_SUBST(MV)
AC_SUBST(MKDIR)
AC_SUBST(SHAREDFLAG)
AC_SUBST(SOSUFFIX)
AC_SUBST(LIBSUFFIX)
AC_SUBST(LIBPREFIX)
AC_SUBST(SONAME)
AC_SUBST(TARGET)

AC_SUBST(ARCH)

AC_OUTPUT(Makefile:Makefile.in)